<resources>
    <string name="app_name">ConstraintLayoutWorkingOut</string>
    <string name="title1">Shanghai</string>
    <string name="poster_description">top poster</string>
    <string name="released">Released</string>
    <string name="date">01-05-20</string>
    <string name="button_text">VERSION TRAILER</string>
    <string name="overview_title">Overview</string>
    <string name="overview_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Id ornare arcu odio ut sem nulla pharetra diam sit. A diam maecenas sed enim ut sem. Eget nulla facilisi etiam dignissim diam quis enim lobortis. Tortor posuere ac ut consequat semper viverra nam. Diam phasellus vestibulum lorem sed risus ultricies tristique. Faucibus ornare suspendisse sed nisi lacus sed viverra tellus. Nullam ac tortor vitae purus faucibus. Ac tortor vitae purus faucibus ornare suspendisse sed nisi lacus. Nec dui nunc mattis enim ut tellus elementum sagittis. Lectus vestibulum mattis ullamcorper velit sed ullamcorper morbi tincidunt ornare. Nulla malesuada pellentesque elit eget gravida cum sociis natoque. Egestas congue quisque egestas diam in arcu. Pellentesque habitant morbi tristique senectus et netus et malesuada. Sagittis eu volutpat odio facilisis mauris sit amet.

Sed faucibus turpis in eu mi bibendum neque egestas congue. Hendrerit gravida rutrum quisque non tellus orci ac. Eget mi proin sed libero enim sed faucibus. Nisl tincidunt eget nullam non nisi est sit. Auctor neque vitae tempus quam pellentesque nec nam aliquam. Praesent elementum facilisis leo vel fringilla est. Vulputate enim nulla aliquet porttitor lacus luctus. Pellentesque habitant morbi tristique senectus. Sed viverra tellus in hac habitasse platea dictumst. Morbi tincidunt augue interdum velit. At consectetur lorem donec massa sapien faucibus et. Turpis massa sed elementum tempus egestas sed sed. Ac auctor augue mauris augue neque gravida in fermentum. Nisl rhoncus mattis rhoncus urna neque viverra justo nec ultrices.

Leo vel orci porta non pulvinar neque laoreet. Viverra accumsan in nisl nisi. Vitae aliquet nec ullamcorper sit amet risus. Arcu cursus vitae congue mauris rhoncus aenean. Euismod elementum nisi quis eleifend quam adipiscing. Faucibus scelerisque eleifend donec pretium vulputate sapien nec sagittis. Blandit massa enim nec dui nunc mattis. Maecenas pharetra convallis posuere morbi. At varius vel pharetra vel turpis. Tellus in hac habitasse platea dictumst vestibulum. Ut ornare lectus sit amet est. Risus quis varius quam quisque id diam vel. Commodo ullamcorper a lacus vestibulum. Nisi lacus sed viverra tellus in hac habitasse platea dictumst. Arcu ac tortor dignissim convallis aenean et tortor. Maecenas pharetra convallis posuere morbi leo urna molestie. Lorem ipsum dolor sit amet consectetur adipiscing elit. Egestas congue quisque egestas diam in arcu cursus euismod. Dignissim diam quis enim lobortis scelerisque fermentum. Commodo viverra maecenas accumsan lacus vel facilisis.

Nunc consequat interdum varius sit. Dis parturient montes nascetur ridiculus mus mauris vitae ultricies. At lectus urna duis convallis convallis tellus id interdum. Tempor orci dapibus ultrices in iaculis nunc sed. Quis eleifend quam adipiscing vitae proin sagittis nisl rhoncus mattis. Eget lorem dolor sed viverra ipsum nunc aliquet bibendum. Ullamcorper malesuada proin libero nunc consequat interdum varius sit. Suspendisse sed nisi lacus sed viverra tellus. Ultrices in iaculis nunc sed augue lacus viverra vitae congue. Fames ac turpis egestas sed tempus urna et pharetra pharetra. Mi sit amet mauris commodo quis imperdiet massa. Faucibus scelerisque eleifend donec pretium vulputate sapien. Aenean euismod elementum nisi quis. Ultrices dui sapien eget mi proin sed. Euismod nisi porta lorem mollis. Sed faucibus turpis in eu mi bibendum. Lacus viverra vitae congue eu. Sit amet justo donec enim diam vulputate.

Velit scelerisque in dictum non. Lorem ipsum dolor sit amet. Metus dictum at tempor commodo. Sapien nec sagittis aliquam malesuada bibendum arcu vitae. Lectus mauris ultrices eros in cursus. Ullamcorper a lacus vestibulum sed arcu. Quam vulputate dignissim suspendisse in. Dui vivamus arcu felis bibendum ut tristique et egestas quis. Nisi quis eleifend quam adipiscing vitae proin sagittis nisl rhoncus. Libero nunc consequat interdum varius. Tellus in hac habitasse platea dictumst. Suspendisse interdum consectetur libero id faucibus nisl tincidunt eget. Diam maecenas sed enim ut.</string>
</resources>